# karaoke_ia_projeto

./: .env.example  .gitignore  Anotações.txt  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  ERRORS.md  LICENSE  MAINTENANCE.md  README.md  RUNBOOK.md  audio_utils.py  config.py  main.py  pyproject.toml  requirements.txt
api/: server.py
audio_capture/: loopback.py
audio_to_midi/: basicpitch_gateway.py
downloaders/: __init__.py  youtube.py
exporters/: __init__.py  krc_exporter.py  lrc_exporter.py
lyrics_sync/: whisper_client.py
midi_tools/: note_corrector.py
output/: output_generator.py
scripts/: update_docs.py
tests/: test_pipeline.py
web/: index.html
