[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-ia"
version = "1.1.0"
description = "Pipeline completo de transcrição de áudio para karaokê usando IA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Karaokê IA"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

keywords = ["karaoke", "midi", "whisper", "transcription", "audio"]

dependencies = [
    "faster-whisper>=1.0.0",
    "basic-pitch>=0.3.0",
    "pretty_midi>=0.2.10",
    "librosa>=0.10.0",
    "mido>=1.3.0",
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "noisereduce>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "torch>=2.2.0",
    "tensorflow>=2.15.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
karaoke-ia = "main:main"

[tool.setuptools.packages.find]
include = ["api", "audio_capture", "audio_to_midi", "lyrics_sync", "midi_tools", "output", "tests"]
